cooking/recipe/index.css
body {
    margin: 0;
}

#Content { /* all content wrapper */
    width: 90vw;
    max-width: 1400px;
    margin-top: 30px;
    margin-left: 5vw;
}

h1 { /* Recipe Title */
    font-family: 'DM Serif Display';
    font-size: 45px;
    color: #404b25;
    margin: 0;
    text-rendering: optimizeLegibility;
    line-height: 1;
}

h3 { /* Recipe Subtitle */
    font-family: 'DM Serif Display';
    font-style: italic;
    font-size: 24px;
    color: rgba(80,80,80);
    margin: 0;
    margin-top: 5px;
}

#Stats {
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
}

#Stats > div { /* individual stat container */
    margin-right: 30px;
    margin-top: 10px;
}

#Stats > div > h4 { /* stat title */
    margin: 0;
    font-family: Raleway;
    font-size: 15px;
    font-weight: 400;
}

#Stats > div > p { /* stat data text */
    margin: 0;
    font-family: Raleway;
    font-size: 19px;
    font-weight: 700;
}

#BoxContainer {
    display: flex;
    width: 100%;
    margin-top: 30px;
}

#IngredientsBox {
    width: 40%;
    position: relative;
    max-width: 400px;
}

#IngredientsBox::after { /* ingred/instr divider */
    content: "";
    position: absolute;
    display: block;
    width: 1px;
    height: 40%;
    background-color: #cfcfcf;
    right: 0;
    top: 30%;
}

#InstructionsBox {
    width: 70%;
    padding-left: 40px;
    box-sizing: border-box;
}

h2 { /* ingred/instr headers */
    margin: 0;
    font-family: DM Serif Display;
    font-size: 30px;
    color: #404b25;
    text-rendering: optimizeLegibility;
}

#IngredList, #InstrList {
    font-family: Montserrat;
    font-size: 18px;
    margin: 0;
    margin-left: -10px;
}

#InstrList {
    margin-top: -5px; /* compensate top align for wider item spacing */
    font-size: 17px;
}

#IngredList > li {
    margin: 10px 0px;
}

#InstrList > li {
    margin: 15px 0px;
}

#IngredList a { /* NOTE: EXTEND TO INSTRUCTIONSSSSSSSSS */
    font-family: Raleway;
    font-style: italic;
    font-weight: 700;
    color: #404b25;
    font-size: 0.9em;
    margin-left: 3px;
    cursor: pointer;
    text-decoration: none;
}

#IngredList a:hover {
    text-decoration: underline;
}


#Back {
    /* absolute positioned to left of content */
    position: absolute;
    left: calc((5vw - 54px) / 2);
    top: 26px;
    /* style */
    display: block;
    width: 54px;
    height: 54px;
    background-image: url(../icons/arrow-left-svgrepo-com.svg);
    background-size: 75%;
    background-position: center;
    background-repeat: no-repeat;
    filter: contrast(0.4);
    border-radius: 100px;
    transition: 0.2s;
}

#Back:hover {
    background-color: rgba(0,0,0,0.2);
    background-size: 70%;
}

@media only screen and (max-width: 1000px) {
    #BoxContainer {
	display: inline-block; /*ingred and instr in separate col */
    }
    #IngredientsBox, #InstructionsBox {
	width: 100%; /*expand both to fill full col */
    }
    #IngredientsBox::after {
	display: none;
    }
    #InstructionsBox {
	padding-left: 0px; /*strip left-spacer padding*/
	padding-top: 20px;
    }

    #Back {
	/* put into document flow at top of content */
	margin-left: -10px;
	position: static;
    }

    #Content {
	/* and shrink top margin */
	margin-top: 16px;
    }

    /* Make stats more compact */
    #Stats > div {
	margin-right: 16px;
    }
    
    #Stats > div > h4 {
	font-size: 14px;
    }

    #Stats > div > p {
	font-size: 17px;
    }
}

#Notes {
    background-color: #fafafa;
    border: 2px dashed #ccc;
    margin-top: 20px;
    padding: 24px;
    box-sizing: border-box;
    border-radius: 15px;
}

#Notes h2 {
    font-size: 25px;
    margin-bottom: -8px;
    margin-top: -4px;
}

#Notes p {
    font-family: Montserrat;
    font-size: 16px;
    line-height: 1.4;
}

#Notes p.highlighted {
    font-weight: 500;
    position: relative;
}

#Notes p.highlighted::after {
    content: "";
    position: absolute;
    width: calc(100% + 8px);
    height: 110%;
    top: calc(0px - 5%);
    left: -4px;
    background-color: #404b253f;
    border-radius: 6px;
}

#Notes p:last-child {
    margin-bottom: 0px;
}

@media only screen and (max-width: 480px) {
    h1 {
	font-size: 40px;
    }
}

